[metadata]
name = final_idp_utilities_david_hdez
version = 0.0.5
author = David Hernandez Morones
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    boto3
    ipaddress

[options.packages.find]
where = src
